<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/avatar"
        android:visibility="visible"
        tools:src="@drawable/avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/__txtNameUser"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/txtLoginUser"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/_txtPassUser"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/txtLoginPass"
            android:inputType="textPassword" />

        <Switch
            android:id="@+id/_swVerPass"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:showText="false"
            android:splitTrack="true"
            android:text="@string/mostrarPass"
            android:textOff="@string/ocultarPass"
            android:textOn="@string/mostrarPass" />

        <CheckBox
            android:id="@+id/_recordarCheck"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="5dp"
            android:text="@string/recordLogin" />

        <Button
            android:id="@+id/_btnEnter"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="25dp"
            android:background="@color/botones"
            android:backgroundTint="@color/botones"
            android:text="@string/btnLoginEntrar" />

        <Button
            android:id="@+id/_btnLoginOlvidado"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@color/botones"
            android:backgroundTint="@color/botones"
            android:text="@string/btnLoginOlvidado" />

    </LinearLayout>

</LinearLayout>